--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "rxjs": "~7.5.0",
+    "swiper": "^8.2.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
